# hyperfetch

./: .gitignore  Cargo.toml  LICENSE  LICENSE.mit  README.md  build_release.sh
src/: cli.rs  main.rs
src/features/: benchmark.rs  colors_preview.rs  hardware_age.rs  mod.rs  processes.rs
src/logos/: mod.rs
src/logos/ascii/: void.txt
src/modules/: battery.rs  cpu.rs  desktop.rs  disk.rs  display.rs  gpu.rs  kernel.rs  memory.rs  mod.rs  network.rs  os.rs  packages.rs  shell.rs  uptime.rs  user.rs
src/output/: colors.rs  icons.rs  mod.rs  progress.rs
